# doc/a3s-openapi.yaml
@@ -1956,14 +1956,6 @@ paths:
       summary: Search for functions.
       operationId: listFunctions
       parameters:
-        - name: permissions
-          in: query
-          required: false
-          description: |
-            If this field is set, then the permission list is filled in
-          schema:
-            type: boolean
-            default: false
         - name: page
           in: query
           required: false
@@ -1983,10 +1975,18 @@ paths:
             maximum: 20
             format: int32
             default: 10
-        - name: filterDescription
+        - name: includeRelations
           in: query
           required: false
-          description: A search query filter on the description
+          description: |
+            Determines whether related entities, such as any associated permissions, are returned.
+          schema:
+            type: boolean
+            default: false
+        - name: filterName
+          in: query
+          required: false
+          description: A search query filter on the name of the function.
           schema:
             type: string
             minLength: 0
@@ -1999,12 +1999,9 @@ paths:
           explode: false
           description: >-
             a comma separated list of fields in their sort order. Ascending
-            order is assumed. Append desc after a field to indicate descending
-            order.
+            order is assumed. Append '_desc' after a field to indicate descending order.  Supported fields. 'name'.
           schema:
-            type: array
-            items:
-              type: string
+            type: string
       responses:
         '200':
           description: OK
